2005-03-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/MenuItemBuilders.cs: Fixed Include/Compile and Deploy options.
	* Commands/ProjectOptionsCommands.cs:
	* Commands/ClassBrowserCommands/ClassBrowserCommands.cs:
	* Internal/CollectionUtilities/Comparers.cs:
	Removed reference to old project pad.
	* Commands/ProjectBrowserCommands/ProjectNodeCommands.cs: 
	* Gui/Dialogs/CombineConfiguration/CombineStartupPanel.cs:
	Use new StartupEntry property instead of SingleStartProjectName.
	* Gui/Pads/ProjectPad/ProjectFileNodeBuilder.cs: Use the correct
	menu path.
	* Makefile.am: Removed old solution pads.
	* Internal/Project/Combine/Combine.cs: Added StartupEntry property
	which replaces SingleStartProjectName. Storing the name made project
	renaming complex to handle.
	* Internal/Project/Combine/CombineExecuteDefinition.cs:
	* Internal/Project/Combine/CombineConfiguration.cs: Serialize the
	real entry name, which may have changed.

2005-03-19  Lluis Sanchez Gual <lluis@novell.com>

	* Commands/MenuItemBuilders.cs: Removed wrong check.
	* Gui/Pads/SolutionPad/NodeBuilder.cs: Removed unused method.

2005-03-15  John Luke  <john.luke@gmail.com>

	* Gui/Workbench/Layout/SdiWorkspaceLayout.cs: add NoGrip flags
	to the documents section to match new dock API

2005-03-15  Lluis Sanchez Gual <lluis@novell.com>

	* Pads/SolutionPad/TreeViewPad.cs: implemented ITreeBuilder.UpdateAll()
	  method in TreeBuilder.
	* Pads/SolutionPad/ITreeBuilder.cs: Added UpdateAll method and some
	  documentation.
	* Pads/ProjectPad/ProjectNodeBuilder.cs: Don't remove files from the
	  tree if ShowAllFiles option is set.
	* Pads/ProjectPad/ProjectFileNodeBuilder.cs: Removed unused class.
	* Pads/ProjectPad/FolderNodeBuilder.cs: When adding a file, don't
	  duplicate nodes if ShowAllFiles option is set.
	* Internal/Project/Project/Collections/ProjectFileCollection.cs:
	  When removing a file, unset the ProjectFile's project. Removed 
	  indexer setter. Nobody uses it and it adds complexity.